@@ -1,5 +1,5 @@
 #
-# $Id: svctool.in,v 2.677 2023-04-09 23:14:55+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.678 2023-04-17 10:06:12+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -26,7 +26,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.677 2023-04-09 23:14:55+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.678 2023-04-17 10:06:12+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -4957,9 +4957,9 @@ fi
 /usr/bin/openssl rsa -in private_key.pem -pubout -out public_key.pem
 $chown mysql:indimail $ca_path/ca-key.pem $ca_path/ca.pem server-key.pem server-cert.pem \
 	client-key.pem client-cert.pem private_key.pem public_key.pem
-/bin/chmod 600 $ca_path/ca-key.pem server-key.pem private_key.pem server-key.pem
-/bin/chmod 640 client-cert.pem server-cert.pem $ca_path/ca.pem client-key.pem
-/bin/chmod 644 public_key.pem server_cert.pem
+/bin/chmod 600 $ca_path/ca-key.pem client-key.pem private_key.pem server-key.pem
+/bin/chmod 640 client-cert.pem server-cert.pem $ca_path/ca.pem
+/bin/chmod 644 public_key.pem
 /bin/rm -f $ca_path/ca-req.pem server-req.pem client-req.pem
 echo ""
 echo "Verifying server and client certs with ca.pem"
@@ -5014,6 +5014,29 @@ wait_for_mysqld()
 		count=`expr $count + 1`
 		sleep 5
 	done
+}
+
+set_mysql_ssl_permission()
+{
+	ssl_dir=$1
+	if [ -z "$ssl_dir" ] ; then
+		echo "usage: set_mysql_ssl_permission dir" 1>&2
+		return 1
+	fi
+	for i in ca-key.pem ca.pem server-key.pem server-cert.pem \
+		client-key.pem client-cert.pem private_key.pem public_key.pem
+	do
+		$chown mysql:indimail $ssl_dir/$i
+	done
+	for i in ca-key.pem client-key.pem private_key.pem server-key.pem
+	do
+		/bin/chmod 600 $ssl_dir/$i
+	done
+	for i in client-cert.pem server-cert.pem ca.pem
+	do
+		/bin/chmod 640 $ssl_dir/$i
+	done
+	/bin/chmod 644 $ssl_dir/public_key.pem
 }
 
 create_mysql_db()
@@ -5113,18 +5136,21 @@ echo ""
 ) > "$DESTDIR"$databasedir/.create_db
 chmod +x "$DESTDIR"$databasedir/.create_db
 $chown mysql:mysql "$DESTDIR"$databasedir
-$chown -R mysql:mysql "$DESTDIR"$databasedir/data "$DESTDIR"$databasedir/logs
+$chown -R mysql:mysql "$DESTDIR"$databasedir/logs
+find "$DESTDIR"$databasedir/data -not -name '*'.pem -exec chown mysql:mysql {} \;
 if [ -x $mysqlPrefix/bin/mysql_ssl_rsa_setup ] ; then
 	if [ ! -f "$DESTDIR"$databasedir/data/ca.pem ] ; then
 		echo "Creating MySQL SSL/TLS Certificates" 1>&2
 		echo "$mysqlPrefix/bin/mysql_ssl_rsa_setup --uid=mysql --datadir="$DESTDIR"$databasedir/data" 1>&2
 		$mysqlPrefix/bin/mysql_ssl_rsa_setup --uid=mysql --datadir="$DESTDIR"$databasedir/data
+		set_mysql_ssl_permission "$DESTDIR"$databasedir/data
 	fi
 elif [ $mariadb -eq 1 ] ; then
 	if [ ! -f "$DESTDIR"$databasedir/ssl/ca.pem ] ; then
 		echo "Creating MariaDB SSL/TLS Certificates" 1>&2
 		echo "mariadb_ssl_rsa_setup "$DESTDIR"$databasedir/ssl "$DESTDIR"$databasedir/ssl" 1>&2
 		mariadb_ssl_rsa_setup "$DESTDIR"$databasedir/ssl "$DESTDIR"$databasedir/ssl
+		set_mysql_ssl_permission "$DESTDIR"$databasedir/ssl
 	fi
 fi
 echo "Creating MySQL Database in "$DESTDIR"$databasedir/data" 1>&2
@@ -5181,7 +5207,8 @@ else
 	fi
 fi
 $chown mysql:mysql "$DESTDIR"$databasedir
-$chown -R mysql:mysql "$DESTDIR"$databasedir/data "$DESTDIR"$databasedir/logs
+$chown -R mysql:mysql "$DESTDIR"$databasedir/logs
+find "$DESTDIR"$databasedir/data -not -name '*'.pem -exec chown mysql:mysql {} \;
 #
 # Pretty Dumb stuff in packing MySQL on openSUSE, creating /usr/my.cnf.
 #
@@ -5252,7 +5279,8 @@ create_mysql_user $mysql_version
 kill $pid
 wait_for_mysqld 1
 $chown mysql:mysql "$DESTDIR"$databasedir
-$chown -R mysql:mysql "$DESTDIR"$databasedir/data "$DESTDIR"$databasedir/logs
+$chown -R mysql:mysql "$DESTDIR"$databasedir/logs
+find "$DESTDIR"$databasedir/data -not -name '*'.pem -exec chown mysql:mysql {} \;
 }
 
 check_mysqld_variable()
@@ -11189,6 +11217,11 @@ case $option in
 				/bin/ln -sf $sysconfdir/indimail.cnf /etc/indimail.cnf
 			fi
 		fi
+		if [ -d "$DESTDIR"$databasedir/ssl ] ; then
+			set_mysql_ssl_permission "$DESTDIR"$databasedir/ssl
+		elif [ -d "$DESTDIR"$databasedir/data ] ; then
+			set_mysql_ssl_permission "$DESTDIR"$databasedir/data
+		fi
 		if [ -d /etc/security/limits.d -a ! -f /etc/security/limits.d/51-mysql.conf ] ; then
 			echo "mysql hard nproc unlimited" > /etc/security/limits.d/51-mysql.conf
 		fi
@@ -11221,6 +11254,11 @@ case $option in
 			fi
 		fi
 		create_mysql_db "$databasedir" "$mysqlSocket"
+		if [ -d "$DESTDIR"$databasedir/ssl ] ; then
+			set_mysql_ssl_permission "$DESTDIR"$databasedir/ssl
+		elif [ -d "$DESTDIR"$databasedir/data ] ; then
+			set_mysql_ssl_permission "$DESTDIR"$databasedir/data
+		fi
 		;;
 
 		ssl_rsa)
@@ -11231,6 +11269,11 @@ case $option in
 		fi
 		echo "Creating MariaDB SSL/TLS Certificates"
 		mariadb_ssl_rsa_setup "$ca_path" "$DESTDIR"$certdir
+		if [ -d "$DESTDIR"$databasedir/ssl ] ; then
+			set_mysql_ssl_permission "$DESTDIR"$databasedir/ssl
+		elif [ -d "$DESTDIR"$databasedir/data ] ; then
+			set_mysql_ssl_permission "$DESTDIR"$databasedir/data
+		fi
 		;;
 
 		indimail)
