@@ -172,6 +172,8 @@ multi-signature generation
 98. svctool: added mrtg graphs for qmta-send
 - 16/04/2023
 99. svctool: fixed /var/indimail/mysqldb/ssl group permissions
+- 17/04/2023
+100.svctool: added set_mysql_ssl_permission function
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
